BugId:51542 - Ads: remove slot INVISIBLE_TOP

--- a/skins/oasis/css/core/ads.scss
+++ b/skins/oasis/css/core/ads.scss
@@ -149,7 +149,7 @@
 }
 
 /** Invisible ads **/
-#INVISIBLE_TOP, #INVISIBLE_1, #INVISIBLE_2 {
+#INVISIBLE_1, #INVISIBLE_2 {
 	position: absolute;
 }
 
